--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0px;
     margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 header {
     background-color: rgb(255, 255, 255);
@@ -18,13 +19,21 @@ main {
     background: linear-gradient(360deg, rgba(202,255,90,1) 0%, rgba(95,120,42,1) 100%);
     color: white;
     text-align: center;
-    
+    border: black 1px;
     margin-left: 25%;
     margin-right: 25%;
+    padding: 50px;
+}
+h1{
+    font-size: 128px;
+    text-shadow: 5px 5px 5px black;
+}
+p {
+    color: black;
 }
 .bottom-text{
     background: rgb(191,240,88);
     background: linear-gradient(360deg, rgba(191,240,88,1) 0%, rgba(165,202,84,1) 100%);
     color: black;
-
+    font-size: 40px;
 }
